# helicopter_thesis_code

./: .gitignore  ControllerFrame.py  Disturbance.py  DisturbanceFrame.py  Dokumentation.tex  FeedforwardFrame.py  HeliControl.py  HeliKalman.py  HeliKalmanSimulation.py  HeliSimulation.py  HelicopterModel.py  HelicopterModelEstimated.py  InaccurateModelConstants.py  JointAndConnector.py  JointAndConnectorEstimated.py  JoystickWidget.py  ModelConstants.py  ModelFrame.py  OberserverFrame.py  Observer.py  ObserverFrame.py  ObserverNoiseFrame.py  ObserverSettingsFrame.py  OperatingPointFrame.py  ParameterFrame.py  Planner.py  README.md  Trajectory.py  TrajectoryFrame.py  cascade_pid.m  cascade_pid_model.slx  clear_controllers.m  double_integrator_test.ipynb  endpraesentation_diagramme.py  heli_master.slx  heli_master.slxc  logger.py  main.py  misc_functions.py  pidAlgorithm.m  (+5 more)
Beleg/: Dokumentation.bib  Dokumentation.tex  pid_diagram.tex
Diploma Thesis/: benchmark_cascadepid_lower_constants.hc3  benchmark_cascadepid_original_constants.hc3  benchmark_cascadepid_random_constants.hc3  benchmark_cascadepid_upper_constants.hc3  benchmark_gainsched_lower_constants.hc3  benchmark_gainsched_original_constants.hc3  benchmark_gainsched_random_constants.hc3  benchmark_gainsched_upper_constants.hc3  benchmark_smclqr_lower_constants.hc3  benchmark_smclqr_original_constants.hc3  (+10 more)
heli_adolc/: CMakeLists.txt  adolc_test.cpp  adolc_test.h  heli_adolc.cpp  heli_adolc.h  heli_adolc.sln  heli_adolc.vcxproj  heli_adolc.vcxproj.filters  heli_adolc_test.cpp
heli_adolc/include/adolc/: adouble.h
(+522 files in other folders)
